# spin-trigger-kafka

./: Cargo.toml  Cross.toml  README.md  spin-pluginify.toml  spin_kafka.wit
.github/workflows/: build.yml
guest/: Cargo.toml  spin.toml
guest/src/: lib.rs
src/: main.rs
