[package]
name = "trigger-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = {version="0.9.0", default-features=false, features=["snappy", "gzip"]}
spin-core = { git = "https://github.com/fermyon/spin", tag = "v0.10.0" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v0.10.0" }
tokio = { version = "1.11", features = [ "full" ] }
tokio-scoped = "0.2.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3.25"
is-terminal = "0.4.3"
serde = "1.0"
anyhow = "1.0.68"
async-trait = "0.1"

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/fermyon/wit-bindgen-backport"
rev = "a39003fadce6c7a8654e3e044fc39fc80d81ec7b"
features = ["async"]